samples/_failures_safe/1761168366_f835b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6f8e09d.c:188:1: error: expected ‘{’ at end of input
  188 | void freeGraph(struct
      | ^~~~
